fixed stretching of icons

--- a/_sass/_landing.scss
+++ b/_sass/_landing.scss
@@ -232,8 +232,7 @@ $applications-button-text-color: #25376B;
     margin-bottom: 20px;
 
     img {
-        width: 60px;
-        height: 60px;
+        width: 82px;
         margin-bottom: 35px;
     }
   }
